@@ -1,20 +1,26 @@
 package com.khaoula.recipientservice.service;
 
+import com.khaoula.recipientservice.exception.ForbiddenException;
+import com.khaoula.recipientservice.exception.ResourceNotFoundException;
 import com.khaoula.recipientservice.model.Recipient;
 import com.khaoula.recipientservice.repository.RecipientRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class RecipientServiceImplTest {
 
     @Mock
@@ -23,60 +29,105 @@ class RecipientServiceImplTest {
     @InjectMocks
     private RecipientServiceImpl recipientService;
 
+    private Recipient recipient;
+
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        recipient = new Recipient();
+        recipient.setId(1L);
+        recipient.setUserId(1L);
+        recipient.setFullName("John Doe");
+        recipient.setIban("FR7612345678901234567890123");
+        recipient.setBank("MyBank");
+        recipient.setCreatedAt(LocalDateTime.now());
     }
 
     @Test
-    void getRecipientList_callsRepositoryWithUserId() {
-        Recipient r = new Recipient();
-        r.setBank("Bank");
-        r.setIban("IBAN");
-        r.setFullName("Full");
-        r.setCreatedAt(LocalDateTime.now());
-        r.setUserId(1L);
-        when(recipientRepository.findByUserId(1L)).thenReturn(List.of(r));
+    void getRecipientList_Success() {
+        when(recipientRepository.findByUserId(1L)).thenReturn(Collections.singletonList(recipient));
 
-        List<Recipient> list = recipientService.getRecipientList(1L);
+        List<Recipient> result = recipientService.getRecipientList(1L);
 
-        assertNotNull(list);
-        assertEquals(1, list.size());
-        verify(recipientRepository, times(1)).findByUserId(1L);
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals("John Doe", result.get(0).getFullName());
     }
 
     @Test
-    void addRecipient_setsUserIdAndCreatedAt_andSaves() {
-        Recipient input = new Recipient();
-        input.setFullName("Test");
-        input.setIban("IBAN123");
+    void addRecipient_Success() {
+        when(recipientRepository.save(any(Recipient.class))).thenReturn(recipient);
 
-        when(recipientRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
+        Recipient result = recipientService.addRecipient(recipient, 1L);
 
-        Recipient saved = recipientService.addRecipient(input, 2L);
-
-        assertNotNull(saved.getUserId());
-        assertEquals(2L, saved.getUserId());
-        assertNotNull(saved.getCreatedAt());
-        assertEquals("Test", saved.getFullName());
-        verify(recipientRepository, times(1)).save(any());
+        assertNotNull(result);
+        assertEquals(1L, result.getUserId());
+        verify(recipientRepository, times(1)).save(any(Recipient.class));
     }
 
     @Test
-    void updateRecipient_notFound_throws() {
-        when(recipientRepository.findById(99L)).thenReturn(Optional.empty());
+    void updateRecipient_Success() {
+        Recipient updatedDetails = new Recipient();
+        updatedDetails.setFullName("Jane Doe");
+        updatedDetails.setIban("FR7698765432109876543210987");
+        updatedDetails.setBank("OtherBank");
 
-        RuntimeException ex = assertThrows(RuntimeException.class, () -> recipientService.updateRecipient(99L, new Recipient(), 1L));
-        assertTrue(ex.getMessage().contains("Recipient not found"));
+        when(recipientRepository.findById(1L)).thenReturn(Optional.of(recipient));
+        when(recipientRepository.save(any(Recipient.class))).thenReturn(recipient);
+
+        Recipient result = recipientService.updateRecipient(1L, updatedDetails, 1L);
+
+        assertNotNull(result);
+        assertEquals("Jane Doe", result.getFullName());
+        assertEquals("OtherBank", result.getBank());
     }
 
     @Test
-    void deleteRecipient_delegatesToRepository() {
-        Recipient r = new Recipient();
-        r.setUserId(1L);
-        when(recipientRepository.findById(5L)).thenReturn(Optional.of(r));
-        doNothing().when(recipientRepository).deleteById(5L);
-        recipientService.deleteRecipient(5L, 1L);
-        verify(recipientRepository, times(1)).deleteById(5L);
+    void updateRecipient_NotFound() {
+        Recipient updatedDetails = new Recipient();
+        when(recipientRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> recipientService.updateRecipient(1L, updatedDetails, 1L));
+    }
+
+    @Test
+    void updateRecipient_Forbidden() {
+        Recipient updatedDetails = new Recipient();
+        when(recipientRepository.findById(1L)).thenReturn(Optional.of(recipient));
+
+        assertThrows(ForbiddenException.class, () -> recipientService.updateRecipient(1L, updatedDetails, 2L));
+    }
+
+    @Test
+    void deleteRecipient_Success() {
+        when(recipientRepository.findById(1L)).thenReturn(Optional.of(recipient));
+        doNothing().when(recipientRepository).deleteById(1L);
+
+        recipientService.deleteRecipient(1L, 1L);
+
+        verify(recipientRepository, times(1)).deleteById(1L);
+    }
+
+    @Test
+    void deleteRecipient_NotFound() {
+        when(recipientRepository.findById(1L)).thenReturn(Optional.empty());
+
+        assertThrows(ResourceNotFoundException.class, () -> recipientService.deleteRecipient(1L, 1L));
+    }
+
+    @Test
+    void deleteRecipient_Forbidden() {
+        when(recipientRepository.findById(1L)).thenReturn(Optional.of(recipient));
+
+        assertThrows(ForbiddenException.class, () -> recipientService.deleteRecipient(1L, 2L));
+    }
+
+    @Test
+    void getByIban_Success() {
+        when(recipientRepository.findByIban("FR7612345678901234567890123")).thenReturn(Optional.of(recipient));
+
+        Optional<Recipient> result = recipientService.getByIban("FR7612345678901234567890123");
+
+        assertTrue(result.isPresent());
+        assertEquals("John Doe", result.get().getFullName());
     }
 }
